--- a/hasura/metadata/databases/default/tables/public_chat.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat.yaml
@@ -1,18 +1,6 @@
 table:
   name: chat
   schema: public
-remote_relationships:
-- definition:
-    hasura_fields:
-    - company_id
-    remote_field:
-      findFirstCompany:
-        arguments:
-          where:
-            id:
-              equals: $company_id
-    remote_schema: CRM
-  name: company
 insert_permissions:
 - permission:
     backend_only: false
@@ -34,6 +22,10 @@ insert_permissions:
       from: x-hasura-User-Id
   role: user
 select_permissions:
+- permission:
+    columns: []
+    filter: {}
+  role: public
 - permission:
     allow_aggregations: true
     columns:
