CI revert pipeline to individual `yarn install` on each step

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -80,7 +80,7 @@ pipelines:
   branches:
     master:
       - step:
-          name: yarn
+          name: yarn audit
           max-time: 10
           caches:
             - node
@@ -88,21 +88,15 @@ pipelines:
             - set || true
             - git log --merges -n 1 --pretty=oneline
             - sh -c "yarn audit --no-progress --non-interactive; [[ $? -gt 2 ]] && exit 1 || exit 0"
-            - yarn install --frozen-lockfile --prefer-offline
-          artifacts:
-            - '**/node_modules/**'
-            - 'node_modules/.*/**'
 
       - parallel:
         - step:
             name: misc checks
             max-time: 15
+            caches:
+              - node
             script:
-              - ls -al node_modules || true
-              - ls -al node_modules/.bin || true
-              - ls -al apps/bridge-proxy/node_modules || true
-              - yarn install --check-files || true
-
+              - yarn install --frozen-lockfile --prefer-offline
               - yarn lint:tsc
               - yarn lint:ls || true
               - yarn lint:workspace || true
@@ -110,13 +104,19 @@ pipelines:
         - step:
             name: lint
             max-time: 20
+            caches:
+              - node
             script:
+              - yarn install --frozen-lockfile --prefer-offline
               - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:lint --base=HEAD~1 --with-deps --parallel --maxParallel=2
 
         - step:
             name: unit tests
             max-time: 25
+            caches:
+              - node
             script:
+              - yarn install --frozen-lockfile --prefer-offline
               - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=HEAD~1 --skip-nx-cache
 #              - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=HEAD~1 --parallel --maxParallel=1 --skip-nx-cache
 #              - NODE_OPTIONS=--max_old_space_size=2222 yarn affected:test --base=HEAD~1 --parallel --maxParallel=2 --skip-nx-cache
@@ -126,7 +126,10 @@ pipelines:
             size: 2x
             name: build
             max-time: 30
+            caches:
+              - node
             script:
+              - yarn install --frozen-lockfile --prefer-offline
               - NODE_OPTIONS=--max_old_space_size=2345 yarn affected:export --base=HEAD~1 --prod --parallel --maxParallel=2
             artifacts:
               - dist/**
@@ -165,7 +168,10 @@ pipelines:
             deployment: production-dockers
             services:
               - docker
+            caches:
+              - node
             script:
+              - yarn install --frozen-lockfile --prefer-offline
               - apt-get update -y && apt-get install -y curl jq time
               - yarn affected --base=HEAD~1 --target=deploy-docker --prod
             artifacts:
@@ -176,7 +182,10 @@ pipelines:
             name: deploy previews
             max-time: 20
             deployment: production-serverless
+            caches:
+              - node
             script:
+              - yarn install --frozen-lockfile --prefer-offline
               - ls -al dist || true
               - ls -al dist/apps || true
               - cat /tmp/bot_message.txt || true
