--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,10 @@
   "[md]": {
     "editor.formatOnType": true,
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
+  },
+  "workbench.colorCustomizations": {
+    "tab.activeBorder": "#4F6A0A",
+    "statusBar.background": "#4F6A0A",
+    "statusBar.foreground": "#ffffff"
   }
 }
