--- a/hasura/metadata/databases/default/tables/public_chat.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat.yaml
@@ -23,10 +23,6 @@ insert_permissions:
   role: user
 select_permissions:
 - permission:
-    columns: []
-    filter: {}
-  role: public
-- permission:
     allow_aggregations: true
     columns:
     - company_id
@@ -39,12 +35,12 @@ select_permissions:
     filter:
       _and:
       - company_id:
-          _eq: X-Hasura-Org-Id
+          _eq: x-hasura-org-id
       - _or:
         - from:
-            _eq: X-Hasura-User-Id
+            _eq: x-hasura-user-id
         - to:
-            _eq: X-Hasura-User-Id
+            _eq: x-hasura-user-id
     limit: 1000
   role: user
 update_permissions:
