--- a/hasura/metadata/databases/default/tables/public_service.yaml
+++ b/hasura/metadata/databases/default/tables/public_service.yaml
@@ -9,10 +9,12 @@ insert_permissions:
     - category
     - code
     - color
+    - contracts
     - description
     - display_text_on_invoice
     - duration
     - employees
+    - equipment_resources
     - friendly_name
     - image
     - invoice_item_name
@@ -25,11 +27,13 @@ insert_permissions:
     - max_clients
     - online_payment_amount
     - online_payment_type
+    - order
     - patient_booking_type
     - price
     - pricing_type
     - procedure_code
     - resources
+    - room_resources
     - service_name
     - service_price
     - sku
@@ -47,10 +51,14 @@ select_permissions:
     - is_package_session
     - is_payment_before_booking
     - is_service_online
+    - max_clients
     - order
+    - contracts
     - employees
+    - equipment_resources
     - locations
     - resources
+    - room_resources
     - timing_rules
     - category
     - code
@@ -61,7 +69,6 @@ select_permissions:
     - friendly_name
     - image
     - invoice_item_name
-    - max_clients
     - online_payment_amount
     - online_payment_type
     - patient_booking_type
@@ -86,10 +93,12 @@ update_permissions:
     - category
     - code
     - color
+    - contracts
     - description
     - display_text_on_invoice
     - duration
     - employees
+    - equipment_resources
     - friendly_name
     - image
     - invoice_item_name
@@ -102,11 +111,13 @@ update_permissions:
     - max_clients
     - online_payment_amount
     - online_payment_type
+    - order
     - patient_booking_type
     - price
     - pricing_type
     - procedure_code
     - resources
+    - room_resources
     - service_name
     - service_price
     - sku
