hasura:export && bridge:generate && yarn hasura:cli migrate create blah --database-name default --from-server

--- a/hasura/metadata/databases/default/tables/public_feature_flags.yaml
+++ b/hasura/metadata/databases/default/tables/public_feature_flags.yaml
@@ -20,6 +20,14 @@ select_permissions:
     - id
     filter: {}
   role: public
+- permission:
+    columns:
+    - id
+    - page_slug
+    - fallback_slug
+    - status
+    filter: {}
+  role: user
 update_permissions:
 - permission:
     check: null
