--- a/hasura/metadata/databases/default/tables/public_notifications.yaml
+++ b/hasura/metadata/databases/default/tables/public_notifications.yaml
@@ -16,13 +16,8 @@ insert_permissions:
     backend_only: false
     check: {}
     columns:
-    - destination
-    - is_read
-    - order
-    - sent_by
     - sent_to
     - type
-    - variables
   role: public
 select_permissions:
 - permission:
@@ -31,6 +26,7 @@ select_permissions:
     - destination
     - id
     - is_read
+    - loop
     - order
     - sent_by
     - sent_to
@@ -43,13 +39,8 @@ update_permissions:
 - permission:
     check: null
     columns:
-    - destination
-    - is_read
-    - order
-    - sent_by
     - sent_to
     - type
-    - variables
     filter: {}
   role: public
 delete_permissions:
