FIX: hasura local

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -1,14 +1,6 @@
-actions:
-- name: actionName
-  definition:
-    kind: synchronous
-    handler: http://host.docker.internal:3000
+actions: []
 custom_types:
   enums: []
-  input_objects:
-  - name: LoginInput
-  - name: SampleInput
-  objects:
-  - name: loginOutput
-  - name: SampleOutput
+  input_objects: []
+  objects: []
   scalars: []
