removed push notification fn

--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -1,5 +1,4 @@
 - "!include public_Discounts.yaml"
-- "!include public_LMS_slugs.yaml"
 - "!include public_Labs.yaml"
 - "!include public_Lists_campaign.yaml"
 - "!include public_Newsletter_campaign.yaml"
@@ -13,8 +12,6 @@
 - "!include public_candidate_list.yaml"
 - "!include public_category.yaml"
 - "!include public_chat.yaml"
-- "!include public_chat2.yaml"
-- "!include public_chat3.yaml"
 - "!include public_clients_data.yaml"
 - "!include public_colors.yaml"
 - "!include public_contacts.yaml"
@@ -40,6 +37,7 @@
 - "!include public_lead_fields.yaml"
 - "!include public_library.yaml"
 - "!include public_library_installers.yaml"
+- "!include public_lms_slugs.yaml"
 - "!include public_locations.yaml"
 - "!include public_marketing_campaign.yaml"
 - "!include public_marketing_referral.yaml"
