--- a/hasura/docker-compose.linux.yml
+++ b/hasura/docker-compose.linux.yml
@@ -13,7 +13,7 @@ services:
       - '8080:8080'
     depends_on:
       - postgres
-    restart: no
+    restart: 'no'
     env_file: .env
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
