--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,29 @@
       "type": "pwa-node"
     },
     {
+      "name": "bridge-api",
+      "request": "launch",
+      "runtimeArgs": ["serve", "bridge-api"],
+      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/nx",
+      "skipFiles": ["<node_internals>/**"],
+      "autoAttachChildProcesses": true,
+      "type": "pwa-node",
+      "console": "integratedTerminal",
+      "outputCapture": "std",
+      "preLaunchTask": "npm: build:bridge-api"
+    },
+    {
+      "name": "bridge-proxy",
+      "request": "launch",
+      "runtimeArgs": ["serve", "bridge-proxy"],
+      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/nx",
+      "skipFiles": ["<node_internals>/**"],
+      "autoAttachChildProcesses": true,
+      "type": "pwa-node",
+      "console": "integratedTerminal",
+      "outputCapture": "std"
+    },
+    {
       "name": "dev",
       "request": "launch",
       "runtimeArgs": ["serve", "web"],
@@ -32,13 +55,15 @@
       "console": "integratedTerminal"
     },
     {
-      "type": "pwa-node",
+      "type": "node",
       "request": "launch",
       "name": "Debug bridge-api (build first)",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/dist/apps/bridge-api/main.js",
       "cwd": "${workspaceFolder}",
-      "internalConsoleOptions": "openOnSessionStart"
+      "internalConsoleOptions": "openOnSessionStart",
+      "preLaunchTask": "npm: build:bridge-api",
+      "outFiles": ["dist/"]
     }
   ]
 }
