--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "pipeline-checks:slow": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn lint:workspace && yarn nx affected --all --target=lint && yarn nx affected --all --target=test && yarn nx affected --all --target=build",
     "pipeline-checks:parallel": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=3 --kill-others-on-fail -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\"",
     "pipeline-checks:insane": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=4 -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\" \"yarn nx affected --all --target=build --parallel\"",
-    "lint:tsc": "concurrently \"tsc --noEmit -p apps/backend/\" \"tsc --noEmit -p apps/bridge-api/\" \"tsc --noEmit -p apps/bridge-proxy/\" \"tsc --noEmit -p apps/connect/\" \"tsc --noEmit -p apps/connect-e2e/\" \"tsc --noEmit -p apps/mgmt/\" \"tsc --noEmit -p apps/mgmt-e2e/\" \"tsc --noEmit -p apps/ui-e2e/\" \"tsc --noEmit -p apps/web/\" \"tsc --noEmit -p apps/web-e2e/\" \"tsc --noEmit -p libs/graphql/tsconfig.lib.json\" \"tsc --noEmit -p libs/ui/tsconfig.spec.json || echo TODO\" \"tsc --noEmit -p libs/yup/tsconfig.lib.json\" \"tsc --noEmit -p libs/yup/tsconfig.spec.json\"",
+    "lint:tsc": "nx affected --target=tsc --parallel",
     "lint:ls": "ls-lint",
     "lint:workspace": "nx workspace-lint",
     "test": "nx test",
-    "lint": "nx workspace-lint && yarn lint:tsc && nx lint",
+    "lint": "concurrently --kill-others-on-fail -n NX,TSC,ESLINT \"yarn lint:workspace\" \"yarn lint:tsc\" \"nx affected:lint --parallel\"",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
