--- a/package.json
+++ b/package.json
@@ -251,6 +251,7 @@
     "husky": "5.2.0",
     "jest": "26.6.3",
     "jest-react-native": "18.0.0",
+    "lint-staged": "^11.0.0",
     "metro-react-native-babel-preset": "0.65.2",
     "micromatch": "^4.0.4",
     "next-page-tester": "0.24.1",
