Testing master pipeline by removing root page grid demo

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "nx": "cross-env NODE_OPTIONS='--max-old-space-size=4096' nx",
+    "serve": "nx serve",
     "vercel": "vercel",
     "apollo": "npx apollo",
     "build:bridge-api": "nx export bridge-api",
