--- a/codegen.yml
+++ b/codegen.yml
@@ -1,6 +1,6 @@
 overwrite: true
 schema: remote-schema.graphql
-documents: "libs/graphql/*.graphql"
+documents: 'libs/graphql/*.graphql'
 generates:
   libs/graphql/generated/graphql.tsx:
     plugins:
