--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -6,7 +6,6 @@
       "production": {
         "url": "https://api.new.pabau.com.com/v1/graphql",
         "headers": {
-          "Authorization": "Bearer ${env:GITHUB-ACCESS-TOKEN}",
           "user-agent": "JS GraphQL"
         },
         "introspect": false
@@ -22,6 +21,7 @@
     }
   },
   "includes": [
+    "apps/**/*.tsx",
     "hasura/schema.graphql",
     "libs/**/*.graphql"
   ]
